@@ -1,4 +1,7 @@
 2021-04-07 Shahzad Muzaffar  <@smuzaffar>
+	V06-02-00 Disable rootdict rule for LinkDef.h files. One should use
+	classes.h and classes_def.xml files for declaring dictionaries
+2021-04-07 Shahzad Muzaffar  <@smuzaffar>
 	V06-01-25 Added more targets matching set SCRAM_TARGET via Self.xml
 2021-04-05 Shahzad Muzaffar  <@smuzaffar>
 	V06-01-24 Fix for externals symlinks for multiple targets
